# haskell-playground

./: .gitignore  LICENSE  flake.nix  fourmolu.yaml  playground.cabal
src/: HKTDemo.hs  Lambda.hs  Playground.hs  RedBlackTree.hs
