cabal-version:      3.14
name:               playground
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Asliddin Abdivasiyev
maintainer:         asliddin.abdivasiyev@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Playground
                      RedBlackTree
                      Lambda
                      HKTDemo
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , containers
                    , text
                    , unicode-show
    hs-source-dirs:   src
    default-language: GHC2024
